--- a/mybatis-3.5.3/pom.xml
+++ b/mybatis-3.5.3/pom.xml
@@ -27,7 +27,7 @@
   </parent>
 
   <artifactId>mybatis</artifactId>
-  <version>3.5.3-xsls</version>
+  <version>3.5.3-use</version>
   <packaging>jar</packaging>
 
   <name>mybatis</name>
